<resources>
    <string name="app_name">Social App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_now">Register Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">Confirm</string>
    <string name="welcome">Welcome Loading…</string>
    <string name="title_activity_ui">UiActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="button">Button</string>
    <string name="phone_number">Phone Number</string>
    <string name="profession">Profession</string>
    <string name="website">Website</string>
    <string name="edit_pass">Edit Password</string>
    <string name="edit_mail">Edit email</string>
    <string name="key_user_name">UserName</string>
    <string name="key_image_url">ImageUrl</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_action">File has been saved successfully</string>
    <string name="post">Post</string>
    <string name="meme_button">Create a meme</string>
    <string name="create_post">Create Post</string>
    <string name="userImage">UserImage</string>
    <string name="likeImage">LikeImage</string>
    <string name="user">User</string>
    <string name="comment">comment</string>
    <string name="comment_text">Comment Text</string>
    <string name="user_image">User Image</string>
    <string name="text_comment">Comment…</string>
    <string name="search">Search</string>
    <string name="edittext">editText</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="title_chat">Chats</string>
    <string name="anonymous">Anonymous</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">PHOTOS</string>
    <string name="tab_text_2">VIDEOS</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="posts">Your Posts</string>
    <string name="enter_title">Enter Your Caption Here</string>
</resources>