<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        android:textStyle="bold|italic"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:textColorHint="#8047FFA2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="@string/app_name"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/email_view"
        android:drawableStart="@drawable/email_view"
        android:drawablePadding="10dp"
        android:fontFamily="casual"
        android:background="@drawable/edittext_background"
         />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/password_view"
        android:drawableLeft="@drawable/password_view"
        android:drawablePadding="10dp"
        android:fontFamily="casual"
        android:textColorHint="#8047FFA2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />
    <EditText
        android:id="@+id/confirm_password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/edittext_background"
        android:textColorHint="#8047FFA2"
        android:drawableStart="@drawable/password_view"
        android:drawableLeft="@drawable/password_view"
        android:drawablePadding="10dp"
        android:fontFamily="casual"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_login" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button1"
        android:padding="10dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <Button
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button1"
        android:padding="10dp"
        android:text="@string/register_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_login" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button1"
        android:padding="10dp"
        android:text="@string/ok"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LogIn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>