<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/design_default_color_secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/alert_cancel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        >

        <ImageView
            android:id="@+id/alert_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/alert_cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:text="@string/cancel"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/strut123"
        android:layout_toStartOf="@id/strut123" />
    <View
        android:id="@+id/strut123"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/alert_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/alert_cancel"
        android:text="@string/post"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/strut123" />

</RelativeLayout>