<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/webUrl"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:gravity="bottom|center"
        android:padding="5dp"
        android:text="@string/website"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfession" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:autofillHints="@string/app_name"
        android:ems="10"
        android:inputType="textUri"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/webUrl"
        android:enabled="false"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/phoneNo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:gravity="bottom|center"
        android:padding="5dp"
        android:text="@string/phone_number"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:autofillHints="@string/app_name"
        android:ems="10"
        android:inputType="phone"
        android:enabled="false"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/phoneNo"
        tools:ignore="LabelFor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/coverPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cover_photo_background"
        android:contentDescription="@string/app_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="256dp"
        android:layout_height="256dp"
        app:cardCornerRadius="128dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@id/profilePhoto"
                app:layout_constraintEnd_toEndOf="@id/profilePhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3333"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6667"/>

    <Button
        android:id="@+id/button"
        android:background="@color/design_default_color_secondary"
        android:textColor="#ffffff"
        android:layout_width="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_mail"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:textColor="#ffffff"
        android:background="@color/design_default_color_secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <EditText
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center|bottom"
        android:text="@string/button"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        android:autofillHints="@string/app_name"
        android:inputType="text"
        android:enabled="false"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:gravity="bottom|center"
        android:padding="5dp"
        android:text="@string/profession"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextProfession"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_margin="4dp"
        android:padding="1dp"
        android:inputType="text"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:autofillHints="@string/app_name"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:gravity="bottom|center"
        android:padding="5dp"
        android:text="@string/email"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_margin="4dp"
        android:enabled="false"
        android:padding="1dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textEmail"
        android:autofillHints="@string/app_name"
        tools:ignore="LabelFor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_edit"
        android:focusable="true"
        android:contentDescription="@string/app_name" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUrl" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        app:tint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>